...
            value={temperature}
            onChangeText={onChangeTemperature}
            onEndEditing={() => save(temperature, 'value')}
            keyboardType="numeric"
            maxLength={5}
            style={inputStyle}
            testID="temperatureInput"
            underlineColorAndroid="transparent"
          />
          <AppText>°{useImperialObservable.value ? 'F' : 'C'}</AppText>
        </View>
        {!!outOfRangeWarning && (
          <View style={styles.hintContainer}>
...
        )}
      </Segment>
      <Segment>
        <AppText style={styles.title}>{labels.time}</AppText>
        <AppTextInput
          onFocus={onShowTimePicker}
          testID="timeInput"
          value={time}
        />
        <DateTimePicker
          isVisible={isTimePickerVisible}
          mode="time"
          onConfirm={setTime}
...
