...
      noPrediction:
        'As soon as you have tracked 3 menstrual cycles, drip. will make predictions for the next ones.',
    },
    home: {
      cycleDay: ' day of your cycle',
      cyclePhase: ' cycle phase - ',
      addDataForToday: 'add data for today',
    },
    shared: {
      cancel: 'Cancel',
      ok: 'OK',
    },
  },
  hamburgerMenu: {
    about: {
      credits: {
        title: 'Credits',
...
